# IAM962

./: .gitignore  .gitmodules  CMakeLists.txt
READMES/: README.md
READMES/project1/: README.md  project1.md
READMES/project1/project1a/: project1a.md
READMES/project1/project1b/: project1b.md
READMES/project1/project1c/: project1c.md
READMES/project2/: project2.md
READMES/project2/project2a/: project2a.md
READMES/project2/project2b/: project2b.md
READMES/project3/: project3.md
project1a/: CMakeLists.txt  project1a.cc
project1a/python/: find_damping_rate.py  plot.py  plot_analysis.py
project1a/python/util/: reader.py
project1a/scripts/: analyze.sh  build.sh  configure.sh  run.sh
project1a/src/: config.txt  defaultparams.h  params.hh  project1a.cc  project1a.hh
project1b/: CMakeLists.txt
project1b/python/: find_stability.py  plot.py
project1b/python/util/: reader.py
project1b/scripts/: analyze.sh  build.sh  build_and_run.sh  run.sh
project1b/src/: defaultparams.h  params.hh  project1b.cc  util.hh
project1c/: CMakeLists.txt
project1c/python/: find_stability.py  plot.py  plot_analysis.py
project1c/python/util/: reader.py
project1c/scripts/: analyze.sh  build.sh  build_and_run.sh  run.sh
project1c/src/: defaultparams.h  params.hh  project1c.cc
project2a/: CMakeLists.txt
project2a/python/: plot.py  plot_out.py  plot_results.py  plot_sim.py  plot_stability.py
project2a/python/util/: param_names.py  reader.py  sim_plotter.py
project2a/scripts/: build.sh  build_and_run.sh  run.sh  test_speed.sh
project2a/src/: defaultparams.h  defaultparams.hh  params.hh  project2a.cc  util.hh
project2b/: CMakeLists.txt
project2b/python/: plot_out.py  plot_stability.py
project2b/python/util/: param_names.py
project2b/scripts/: build.sh  run.sh  test_speed.sh
project2b/src/: defaultparams.hh  params.hh  project2b.cc  util.hh
project3/: CMakeLists.txt
project3/python/: plot_out.py  plot_results.py  plot_stability.py
project3/python/util/: param_names.py
project3/scripts/: build.sh  run.sh  test_speed.sh
project3/src/: defaultparams.hh  params.hh  project3.cc  util.hh
python/: env.yml  generate_buildparams.py
python/util/: out_plotter.py  out_reader.py  results_plotter.py  stability_plotter.py
scripts/: python_activate_env.sh  python_create_env.sh
